--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ categories:
 	</div>
 	<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
 		<h1 class="intro-text">
-			The Li Lab of <span style="color: #FC8D59">ma</span>terials <span style="color: #FC8D59">re</span>search works on materials design for <span style="color: #6497D6">s</span>ustainable <span style="color: #6497D6">e</span>nergy <span style="color: #6497D6">a</span>pplications by computation, simulation, and data-driven methods.
+			The Li Lab of <span style="color: #FC8D59">ma</span>terials <span style="color: #FC8D59">re</span>search works on materials design for <span style="color: #6497D6">s</span>ustainable <span style="color: #6497D6">e</span>nergy <span style="color: #6497D6">a</span>pplications by first-principles calculations and data-driven methods.
 			<!--We are affiliated with the Thrust of Sustainable Energy and Environment at <a class="off" href="https://hkust-gz.edu.cn/">Hong Kong University of Science and Technology (Guangzhou)</a>. -->
 		</h1>
 	</div>
