--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@ categories:
         <img width=189 src="/images/logos/logo_hkustgz.png">
       </a>
 	  &nbsp; &nbsp; &nbsp; &nbsp;
-	  <a class="off" href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/function-hub/sustainable-energy-and-environment/">
+	  <!-- <a class="off" href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/function-hub/sustainable-energy-and-environment/"> -->
+	  <a class="off" href="https://facultyprofiles.hkust-gz.edu.cn/thrust-faculties?code=10011A10000000000H24">
 		<img width=86 src="/images/logos/logo_see.png">
 	  </a>
     </div>
