--- a/research/index.html
+++ b/research/index.html
@@ -61,7 +61,7 @@ categories:
 				</div>
 			</div>
 			<div class="col-sm-4 col-xs-12 col-img">
-				<img class="offset" src="/images/research/assb-interface.png">
+				<img class="offset" src="/images/research/assb-interface.png" alt="schematic of practical challenges at the interfaces in ASSBs">
 			</div>
 		</div>
 	</div>
@@ -92,6 +92,16 @@ categories:
                         and to explore the design principles of energy storage and conversion materials (e.g., solid
                         electrolytes, halide perovskites). <!-- data is the foundation -->
                     </p>
+                    <p>
+                        <img src="/images/research/ht-comp.png" alt="HT computational database" />
+                        <br /><b>Example 1.</b> High-throughput computational data as the foundation for materials design.<sup><a href="https://doi.org/10.1039/C9EE01371G">[1]</a></sup>
+                    </p>
+                    <p><strong>Relevant references</strong></p>
+                    <ol>
+                    <li><a href="https://doi.org/10.1039/C9EE01371G">Y. Li and K. Yang, Energy Environ. Sci. (2019)</a></li>
+                    <li><a href="https://doi.org/10.1038/s41597-024-02924-x">Y. Li, D. Lee, P. Cai, Z. Zhang, P. Gorai, P. Canepa, Sci. Data (2024)</a></li>
+                    <li><a href="https://doi.org/10.1002/wcms.1500">Y. Li and K. Yang, WIREs Comput. Mol. Sci., (2021)</a></li>
+                    </ol>
 				</div>
 			</div>
 			<div class="col-sm-4 col-xs-12 col-img">
