--- a/research/index.html
+++ b/research/index.html
@@ -46,18 +46,17 @@ categories:
                         using first-principles calculations aided with data-driven methods, and to realistically
                         address the remaining interface-related key challenges for full-scale commercialization of ASSBs.
                     </p>
-                    <!--
-                    <p align="center">
-                        <img src="/images/research/.png" alt="relevant research" />
-                        <br /><b>Figure 1:</b> Schematic of ...
+                    <p>
+                        <img width=500 src="/images/research/se-surface-interface.png" alt="SE surface and interface" />
+                        <br /><b>Example 1.</b> First-principles investigations of solid-electrolyte surfaces and interfaces.<sup><a href="https://doi.org/10.1103/PRXEnergy.1.023004">[1]</a><a href="https://doi.org/10.1039/D1TA10228A">[2]</a></sup>
                     </p>
-
-                    <p><strong>Relevant references</strong></p>
-
+                    <p><strong>Relevant references on first-principles mechanism investigation</strong></p>
                     <ol>
-                    <li><a href="https://doi.org/10.1038/s41563-019-0431-3">T. Famprikis, P. Canepa et al., Nature Mat. (2019)</a></li>
+                    <li><a href="https://doi.org/10.1103/PRXEnergy.1.023004">Y. Li, P. Canepa, P. Gorai, PRX Energy (2022)</a></li>
+                    <li><a href="https://doi.org/10.1039/D1TA10228A">Y. Li, A. Prabhu, T. Choksi, P. Canepa, J. Mater. Chem. A (2022)</a></li>
+                    <li><a href="https://doi.org/10.1038/s41586-022-04961-1">Y. Lei#, Y. Li# et al., Nature (2022)</a></li>
+                    <li><a href="https://doi.org/10.1038/s41586-019-1868-x">Y. Chen#, Y. Lei#, Y. Li et al., Nature (2020)</a></li>
                     </ol>
-                    -->
 				</div>
 			</div>
 			<div class="col-sm-4 col-xs-12 col-img">
@@ -95,6 +94,10 @@ categories:
                     <p>
                         <img width=500 src="/images/research/ht-comp.png" alt="HT computational database" />
                         <br /><b>Example 1.</b> High-throughput computational data as the foundation for materials design - perovskite derivatives.<sup><a href="https://doi.org/10.1039/C9EE01371G">[1]</a></sup>
+                    </p>
+                    <p>
+                        <img width=500 src="/images/research/raman-db.png" alt="An accurate Raman database" />
+                        <br /><b>Example 2.</b> A database of computed Raman spectra of inorganic compounds with accurate hybrid functionals.<sup><a href="https://doi.org/10.1038/s41597-024-02924-x">[2]</a></sup>
                     </p>
                     <p><strong>Relevant references</strong></p>
                     <ol>
@@ -135,6 +138,16 @@ categories:
                         the kinetic processes at the aqueous battery interfaces using <i>ab initio</i>
                         molecular dynamics and to improve the battery stability and performance.
                     </p>
+                    <!--
+                    <p align="center">
+                        <img src="/images/research/.png" alt="relevant research" />
+                        <br /><b>Figure 1:</b> Schematic of ...
+                    </p>
+                    -->
+                    <p><strong>Relevant references</strong></p>
+                    <ol>
+                    <li><a href="https://doi.org/10.1038/s41467-024-49492-7">S. Liu#, Y. Li#, D. Wang# et al., Nat. Commun. (2024)</a></li>
+                    </ol>
 				</div>
 			</div>
 			<div class="col-sm-4 col-xs-12 col-img">
