--- a/research/index.html
+++ b/research/index.html
@@ -47,10 +47,10 @@ categories:
                         address the remaining interface-related key challenges for full-scale commercialization of ASSBs.
                     </p>
                     <p>
-                        <img width=500 src="/images/research/se-surface-interface.png" alt="SE surface and interface" />
+                        <img width=600 src="/images/research/se-surface-interface.png" alt="SE surface and interface" />
                         <br /><b>Example 1.</b> First-principles investigations of solid-electrolyte surfaces and interfaces.<sup><a href="https://doi.org/10.1103/PRXEnergy.1.023004">[1]</a><a href="https://doi.org/10.1039/D1TA10228A">[2]</a></sup>
                     </p>
-                    <p><strong>Relevant references on first-principles mechanism investigation</strong></p>
+                    <p><strong>Relevant references</strong> on first-principles mechanism investigation</p>
                     <ol>
                     <li><a href="https://doi.org/10.1103/PRXEnergy.1.023004">Y. Li, P. Canepa, P. Gorai, PRX Energy (2022)</a></li>
                     <li><a href="https://doi.org/10.1039/D1TA10228A">Y. Li, A. Prabhu, T. Choksi, P. Canepa, J. Mater. Chem. A (2022)</a></li>
@@ -96,7 +96,7 @@ categories:
                         <br /><b>Example 1.</b> High-throughput computational data as the foundation for materials design - perovskite derivatives.<sup><a href="https://doi.org/10.1039/C9EE01371G">[1]</a></sup>
                     </p>
                     <p>
-                        <img width=500 src="/images/research/raman-db.png" alt="An accurate Raman database" />
+                        <img width=700 src="/images/research/raman-db.png" alt="An accurate Raman database" />
                         <br /><b>Example 2.</b> A database of computed Raman spectra of inorganic compounds with accurate hybrid functionals.<sup><a href="https://doi.org/10.1038/s41597-024-02924-x">[2]</a></sup>
                     </p>
                     <p><strong>Relevant references</strong></p>
