--- a/papers/index.html
+++ b/papers/index.html
@@ -5,6 +5,16 @@ categories:
  - papers
 ---
 
+<div class="row">
+	<div class="col-md-12">
+		<div class="smallhead">
+			<p>Our publications are also available on
+				<a class="off" href="https://scholar.google.com/citations?user=FWpyNyYAAAAJ">Google Scholar</a>.
+			</p>
+		</div>
+	</div>
+</div>
+
 {% for paper in site.categories.papers %}
 {% capture prev_year %}{{ this_year }}{% endcapture %}
 {% capture this_year %}{{ paper.year }}{% endcapture %}
