--- a/papers/index.html
+++ b/papers/index.html
@@ -5,6 +5,8 @@ categories:
  - papers
 ---
 
+<div class="bigspacer"></div>
+
 <div class="row">
 	<div class="col-md-12">
 		<div class="smallhead">
@@ -14,6 +16,8 @@ categories:
 		</div>
 	</div>
 </div>
+
+<div class="bigspacer"></div>
 
 {% for paper in site.categories.papers %}
 {% capture prev_year %}{{ this_year }}{% endcapture %}
