--- a/papers/index.html
+++ b/papers/index.html
@@ -18,6 +18,7 @@ categories:
 </div>
 
 <div class="bigspacer"></div>
+<div class="spacer"></div>
 
 {% for paper in site.categories.papers %}
 {% capture prev_year %}{{ this_year }}{% endcapture %}
