--- a/team/index.html
+++ b/team/index.html
@@ -15,6 +15,7 @@ categories:
 
 <div class="bigspacer"></div>
 
+<!--
 {% for member in site.categories.team reversed %}
 	{% if member.alumni != true %}
     {% cycle 'add rows': '<div class="row">', '', '' %}
@@ -35,6 +36,100 @@ categories:
     {% endif %}
 {% endfor %}
 {% cycle 'close rows': '', '</div>', '</div>' %}
+-->
+
+<div class="row">
+	<div class="col-lg-4 memberbox">
+		<div class="media">
+			<a class="float-left" href="/team/yuheng-li/">
+				<img width=160 class="mr-3" src="/images/team/yuheng-li.png">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/yuheng-li/" class="off">Yuheng Li</a></div>
+				<p class="note">Principal investigator</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+
+
+
+
+
+
+	<div class="col-lg-4 memberbox"></div>
+		<div class="media">
+			<a class="float-left" href="/team/zhanlin-li/">
+				<img width=160 class="mr-3" src="/images/team/zhanlin-li.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/zhanlin-li/" class="off">Zhanlin Li</a></div>
+				<p class="note">MPhil Student</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+
+
+	<div class="col-lg-4 memberbox"></div>
+		<div class="media">
+			<a class="float-left" href="/team/guanghua-liu/">
+				<img width=160 class="mr-3" src="/images/team/guanghua-liu.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/guanghua-liu/" class="off">Guanghua Liu</a></div>
+				<p class="note">Research Assistant</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+</div>
+
+
+<div class="row">
+	<div class="col-lg-4 memberbox"></div>
+		<div class="media">
+			<a class="float-left" href="/team/yixuan-zhang/">
+				<img width=160 class="mr-3" src="/images/team/yixuan-zhang.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/yixuan-zhang/" class="off">Yixuan Zhang</a></div>
+				<p class="note">Research Assistant</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+
+
+	<div class="col-lg-4 memberbox"></div>
+		<div class="media">
+			<a class="float-left" href="/team/zizhou-huang/">
+				<img width=160 class="mr-3" src="/images/team/zizhou-huang.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/zizhou-huang/" class="off">Zizhou Huang</a></div>
+				<p class="note">Undergraduate Student</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 
 <!--
 <div class="row">
