--- a/team/index.html
+++ b/team/index.html
@@ -16,6 +16,7 @@ categories:
 <div class="bigspacer"></div>
 
 
+<!--
 {% for member in site.categories.team reversed %}
 	{% if member.alumni != true %}
     {% cycle 'add rows': '<div class="row">', '', '' %}
@@ -36,9 +37,10 @@ categories:
     {% endif %}
 {% endfor %}
 {% cycle 'close rows': '', '</div>', '</div>' %}
+-->
 
 
-<!--
+
 <div class="row">
 	<div class="col-lg-4 memberbox">
 		<div class="media">
@@ -59,7 +61,7 @@ categories:
 
 
 
-	<div class="col-lg-4 memberbox"></div>
+	<div class="col-lg-4 memberbox">
 		<div class="media">
 			<a class="float-left" href="/team/zhanlin-li/">
 				<img width=160 class="mr-3" src="/images/team/zhanlin-li.jpg">
@@ -74,7 +76,7 @@ categories:
 	</div>
 
 
-	<div class="col-lg-4 memberbox"></div>
+	<div class="col-lg-4 memberbox">
 		<div class="media">
 			<a class="float-left" href="/team/guanghua-liu/">
 				<img width=160 class="mr-3" src="/images/team/guanghua-liu.jpg">
@@ -91,7 +93,7 @@ categories:
 
 
 <div class="row">
-	<div class="col-lg-4 memberbox"></div>
+	<div class="col-lg-4 memberbox">
 		<div class="media">
 			<a class="float-left" href="/team/yixuan-zhang/">
 				<img width=160 class="mr-3" src="/images/team/yixuan-zhang.jpg">
@@ -106,7 +108,7 @@ categories:
 	</div>
 
 
-	<div class="col-lg-4 memberbox"></div>
+	<div class="col-lg-4 memberbox">
 		<div class="media">
 			<a class="float-left" href="/team/zizhou-huang/">
 				<img width=160 class="mr-3" src="/images/team/zizhou-huang.jpg">
@@ -120,7 +122,7 @@ categories:
 		<div class="bigspacer"></div>
 	</div>
 </div>
--->
+
 
 
 
