--- a/team/index.html
+++ b/team/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: li research lab / team
+title: Li Research Lab / team
 categories:
  - team
 ---
@@ -49,7 +49,7 @@ categories:
 			</a>
 			<div class="media-body">
 				<div class="head mb-1"><a href="/team/yuheng-li/" class="off">Yuheng Li</a></div>
-				<p class="note">Principal investigator</p>
+				<p class="note">Principal Investigator</p>
 			</div>
 		</div>
 		<div class="bigspacer"></div>
