--- a/research/index.html
+++ b/research/index.html
@@ -37,7 +37,7 @@ categories:
 					<p>All-solid-state batteries (ASSBs) hold promise as a safer and higher-energy-density
                         alternative to state-of-the-art lithium-ion batteries. One of the key challenges
                         in the development of ASSBs is the understanding and control of the interfaces
-                        between the solid electrolyte and the electrodes (the right figure<sup><a href="https://www.nature.com/articles/s41560-023-01208-9" class="off">[1]</a></sup>).
+                        between the solid electrolyte and the electrodes (the right figure<sup><a href="https://www.nature.com/articles/s41560-023-01208-9">[ref]</a></sup>).
                         (Electro)chemical reactions take place at unstable battery interfaces and produce
                         chemically-distinct interlayers known as interphases. The interphases' microstructural,
                         thermodynamic, electrochemical, and ion-transport properties are crucial to the
