--- a/team/index.html
+++ b/team/index.html
@@ -110,6 +110,21 @@ categories:
 
 	<div class="col-lg-4 memberbox">
 		<div class="media">
+			<a class="float-left" href="/team/zhengqi-liu/">
+				<img width=160 class="mr-3" src="/images/team/zhengqi-liu.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/zhengqi-liu/" class="off">Zhengqi Liu</a></div>
+				<p class="note">Research Assistant</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+
+
+	<div class="col-lg-4 memberbox">
+		<div class="media">
 			<a class="float-left" href="/team/zizhou-huang/">
 				<img width=160 class="mr-3" src="/images/team/zizhou-huang.jpg">
 			</a>
