--- a/team/index.html
+++ b/team/index.html
@@ -57,6 +57,21 @@ categories:
 	</div>
 
 
+	<div class="col-lg-4 memberbox">
+		<div class="media">
+			<a class="float-left" href="/team/lijia-yao/">
+				<img width=160 class="mr-3" src="/images/team/lijia-yao.png">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/lijia-yao/" class="off">Lijia Yao</a></div>
+				<p class="note">PhD Student (Incoming)</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+
+
 
 
 
@@ -74,8 +89,10 @@ categories:
 		<div class="bigspacer"></div>
 		<div class="bigspacer"></div>
 	</div>
+</div>
 
 
+<div class="row">
 	<div class="col-lg-4 memberbox">
 		<div class="media">
 			<a class="float-left" href="/team/guanghua-liu/">
@@ -89,10 +106,8 @@ categories:
 		<div class="bigspacer"></div>
 		<div class="bigspacer"></div>
 	</div>
-</div>
 
 
-<div class="row">
 	<div class="col-lg-4 memberbox">
 		<div class="media">
 			<a class="float-left" href="/team/yixuan-zhang/">
@@ -121,8 +136,10 @@ categories:
 		<div class="bigspacer"></div>
 		<div class="bigspacer"></div>
 	</div>
+</div>
 
 
+<div class="row">
 	<div class="col-lg-4 memberbox">
 		<div class="media">
 			<a class="float-left" href="/team/zizhou-huang/">
@@ -136,6 +153,8 @@ categories:
 		<div class="bigspacer"></div>
 		<div class="bigspacer"></div>
 	</div>
+
+	
 </div>
 
 
