--- a/team/index.html
+++ b/team/index.html
@@ -60,11 +60,11 @@ categories:
 	<div class="col-lg-4 memberbox">
 		<div class="media">
 			<a class="float-left" href="/team/lijia-yao/">
-				<img width=160 class="mr-3" src="/images/team/lijia-yao.png">
+				<img width=160 class="mr-3" src="/images/team/lijia-yao.jpg">
 			</a>
 			<div class="media-body">
 				<div class="head mb-1"><a href="/team/lijia-yao/" class="off">Lijia Yao</a></div>
-				<p class="note">PhD Student (Incoming)</p>
+				<p class="note">PhD Student</p>
 			</div>
 		</div>
 		<div class="bigspacer"></div>
