--- a/team/index.html
+++ b/team/index.html
@@ -72,8 +72,40 @@ categories:
 	</div>
 
 
+	<div class="col-lg-4 memberbox">
+		<div class="media">
+			<a class="float-left" href="/team/guanghua-liu/">
+				<img width=160 class="mr-3" src="/images/team/guanghua-liu.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/guanghua-liu/" class="off">Guanghua Liu</a></div>
+				<p class="note">PhD Student</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+</div>
 
 
+
+
+
+
+<div class="row">
+	<div class="col-lg-4 memberbox">
+		<div class="media">
+			<a class="float-left" href="/team/yixuan-zhang/">
+				<img width=160 class="mr-3" src="/images/team/yixuan-zhang.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/yixuan-zhang/" class="off">Yixuan Zhang</a></div>
+				<p class="note">PhD Student</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
 
 
 	<div class="col-lg-4 memberbox">
@@ -90,37 +122,6 @@ categories:
 		<div class="bigspacer"></div>
 	</div>
 </div>
-
-
-<div class="row">
-	<div class="col-lg-4 memberbox">
-		<div class="media">
-			<a class="float-left" href="/team/guanghua-liu/">
-				<img width=160 class="mr-3" src="/images/team/guanghua-liu.jpg">
-			</a>
-			<div class="media-body">
-				<div class="head mb-1"><a href="/team/guanghua-liu/" class="off">Guanghua Liu</a></div>
-				<p class="note">Research Assistant</p>
-			</div>
-		</div>
-		<div class="bigspacer"></div>
-		<div class="bigspacer"></div>
-	</div>
-
-
-	<div class="col-lg-4 memberbox">
-		<div class="media">
-			<a class="float-left" href="/team/yixuan-zhang/">
-				<img width=160 class="mr-3" src="/images/team/yixuan-zhang.jpg">
-			</a>
-			<div class="media-body">
-				<div class="head mb-1"><a href="/team/yixuan-zhang/" class="off">Yixuan Zhang</a></div>
-				<p class="note">Research Assistant</p>
-			</div>
-		</div>
-		<div class="bigspacer"></div>
-		<div class="bigspacer"></div>
-	</div>
 
 
 	<div class="col-lg-4 memberbox">
