--- a/team/index.html
+++ b/team/index.html
@@ -130,6 +130,42 @@ categories:
 
 	<div class="col-lg-4 memberbox">
 		<div class="media">
+			<a class="float-left" href="/team/yanling-jiang/">
+				<img width=160 class="mr-3" src="/images/team/yanling-jiang.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/yanling-jiang/" class="off">Yanling Jiang</a></div>
+				<p class="note">MPhil Student</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+</div>
+
+
+
+
+
+
+<div class="row">
+	<div class="col-lg-4 memberbox">
+		<div class="media">
+			<a class="float-left" href="/team/xingwen-chen/">
+				<img width=160 class="mr-3" src="/images/team/xingwen-chen.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/xingwen-chen/" class="off">Xingwen Chen</a></div>
+				<p class="note">MPhil Student</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
+
+
+	<div class="col-lg-4 memberbox">
+		<div class="media">
 			<a class="float-left" href="/team/zhengqi-liu/">
 				<img width=160 class="mr-3" src="/images/team/zhengqi-liu.jpg">
 			</a>
@@ -141,7 +177,26 @@ categories:
 		<div class="bigspacer"></div>
 		<div class="bigspacer"></div>
 	</div>
+
+
+	<div class="col-lg-4 memberbox">
+		<div class="media">
+			<a class="float-left" href="/team/jiafan-fu/">
+				<img width=160 class="mr-3" src="/images/team/jiafan-fu.jpg">
+			</a>
+			<div class="media-body">
+				<div class="head mb-1"><a href="/team/jiafan-fu/" class="off">Jiafan Fu</a></div>
+				<p class="note">Research Assistant</p>
+			</div>
+		</div>
+		<div class="bigspacer"></div>
+		<div class="bigspacer"></div>
+	</div>
 </div>
+
+
+
+
 
 
 <div class="row">
